--- a/static/sass/admin_sites/_clusters.scss
+++ b/static/sass/admin_sites/_clusters.scss
@@ -1,5 +1,5 @@
-#clusters_content *{
-    color: #fff !important;
+#clusters_content * table *{
+    color: #fff;
 }
 .clusters_Mh{
     height: 90vh;
