--- a/static/sass/admin_sites/_staions.scss
+++ b/static/sass/admin_sites/_staions.scss
@@ -29,3 +29,8 @@
 #form_container * input{
     margin: 5px 0;
 }
+
+#station_form * option{
+    color: grey;
+    font-style: italic;
+}
